# jgl_demos

JGL_MeshLoader/: CMakeLists.txt
JGL_MeshLoader/source/render/: opengl_buffer_manager.cpp  opengl_context.cpp  ui_context.cpp
JGL_MeshLoader/source/shader/: shader_util.cpp
